client/src/pages/Home/Home.module.css
.fixedTop {
	padding-left: 1rem;
	padding-right: 1rem;
	position: fixed;
	left: 0;
	width: 100%;
	background-color: white;
	z-index: 10;
	border-bottom: 1px solid gray;
	top: 1.5rem;
	padding-top: 0.5rem;
}

.scrollingBottom {
	padding-top: 12rem;
	padding-left: 1rem;
	padding-right: 1rem;
}

